Fix position of orthology table horizontal scrollbar

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,8 @@
 @import "~bootstrap/scss/bootstrap";
 
 .react-bs-table table, .table {
+  margin-bottom: 0;
+
   td, th {
     white-space: normal;
     text-overflow: clip;
